nedit 2: correction flex to have no overflow on any flex elements

--- a/style.css
+++ b/style.css
@@ -40,7 +40,6 @@ header h2 {
 }
 .search-box form {
     display: flex;
-    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
     padding-left: 25px;
